(feat): jwt token - Add new flyway script - Update User Entity - Add Spring Security Dependency - Add new enums Role, TokenType, Gender - Create new entity token - Use blaze persistence for token entity - Remove embedded class
